--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-12-clash-node.htm">
+					<img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-12-clash-node.htm">
+					<h2>3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了韩国、香港、加拿大、欧洲、美国、日本、新加坡等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-11-free-high-speed-nodes.htm">
 					<img src="/uploads/20240228/dcf34dc84fbab448f7946e41c45555d6.webp" alt="3月11日20.6M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
@@ -228,22 +244,6 @@
 					<h2>3月3日19M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了美国、新加坡、韩国、日本、香港、加拿大、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-2-node-share.htm">
-					<img src="/uploads/20240228/cc93aa4b19cc04eb52a9aba9ef1e6db7.webp" alt="3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-2-node-share.htm">
-					<h2>3月2日22.2M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了加拿大、美国、欧洲、新加坡、香港、韩国、日本等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
