--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm">
+					<img src="/uploads/20240228/7aa6e6a64f6cba0d37441ab3be847079.webp" alt="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm">
+					<h2>5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</h2>
+				</a>
+				<p>这一次的节点更新覆盖了新加坡、香港、美国、欧洲、韩国、加拿大、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm">
 					<img src="/uploads/20240228/17a9e01ded9e492cb2b2edefa16af20f.webp" alt="5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址" class="img-responsive" />
 				</a>
@@ -228,22 +244,6 @@
 					<h2>4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了美国、韩国、加拿大、日本、欧洲、新加坡、香港等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-4-24-clash-windows.htm">
-					<img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-4-24-clash-windows.htm">
-					<h2>4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了韩国、加拿大、香港、美国、日本、欧洲、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
